--- a/recipes/banoffee_pie.html
+++ b/recipes/banoffee_pie.html
@@ -7,9 +7,49 @@
   </head>
   <body>
     <h1>Banoffee Pie</h1>
-<img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/04/Banoffee-pie-1f3c2d8.jpg?quality=90&webp=true&resize=440,400"
-alt="Banoffee Pie"></img>
-<br>
-<p>Treat loved ones to a banoffee pie for dessert featuring a classic biscuit base, oozy caramel, bananas, cream and chocolate. Who could resist?</p>
+    <img
+      src="https://images.immediate.co.uk/production/volatile/sites/30/2020/04/Banoffee-pie-1f3c2d8.jpg?quality=90&webp=true&resize=440,400"
+      height="440"
+      width="400"
+      alt="Banoffee Pie"
+    />
+    <p>
+      Treat loved ones to a banoffee pie for dessert featuring a classic biscuit
+      base, oozy caramel, bananas, cream and chocolate. Who could resist?
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>225g digestive biscuits</li>
+      <li>150g butter, melted</li>
+      <li>397g can caramel or 400g dulce de leche</li>
+      <li>3 small bananas, sliced</li>
+      <li>300ml double cream</li>
+      <li>1 tbsp icing sugar</li>
+      <li>1 square dark chocolate (optional)</li>
+    </ul>
+    <h3>Method</h3>
+    <h4>STEP 1</h4>
+    <p>
+      Crush the digestive biscuits, either by hand using a wooden spoon, or in a
+      food processor, until you get fine crumbs, tip into a bowl. <br />Mix the
+      crushed biscuits with the melted butter until fully combined. Tip the
+      mixture into a 23cm loose bottomed fluted tart tin and cover the tin,
+      <br />including the sides, with the biscuit in an even layer. Push down
+      with the back of a spoon to smooth the surface and chill for 1 hr, or
+      overnight.
+    </p>
+    <h4>STEP 2</h4>
+    <p>
+      Beat the caramel to loosen and spoon it over the bottom of the biscuit
+      base. Spread it out evenly using the back of a spoon or palette knife.
+      <br />Gently push the chopped banana into the top of the caramel until the
+      base is covered. Put in the fridge.
+    </p>
+    <h4>STEP 3</h4>
+    <p>
+      Whip the cream with the icing sugar until billowy and thick. Take the pie
+      out of the fridge and spoon the whipped cream on top of the bananas.
+      <br />Grate the dark chocolate over the cream, if you like, and serve.
+    </p>
   </body>
 </html>
