--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Odin Recipes - Your go-to place for delicious recipes like Lasagna and Banoffee Pie."
+    />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/lasagna.html">Lasagna</a></li>
-      <li><a href="recipes/banoffee_pie.html">Banoffee Pie</a></li>
-    </ul>
+    <header>
+      <h1>Odin Recipes</h1>
+    </header>
+    <nav aria-label="Main Navigation">
+      <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/banoffee_pie.html">Banoffee Pie</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
