--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/banoffee_pie.html">Banoffee Pie</a></li>
+        <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
       </ul>
     </nav>
   </body>
