--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Odin Recipes - Your go-to place for delicious recipes like Lasagna and Banoffee Pie."
     />
     <title>Odin Recipes</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
