--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </header>
     <nav aria-label="Main Navigation">
       <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/banoffee_pie.html">Banoffee Pie</a></li>
-        <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
+        <li><a href="recipes/lasagna/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/banoffee/banoffee_pie.html">Banoffee Pie</a></li>
+        <li><a href="recipes/cheesecake/cheesecake.html">Cheesecake</a></li>
       </ul>
     </nav>
   </body>
