--- a/recipes/banoffee/banoffee_pie.html
+++ b/recipes/banoffee/banoffee_pie.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Banoffee Pie</h1>
+    <link rel="stylesheet" href="style.css" />
     <img
       src="https://images.immediate.co.uk/production/volatile/sites/30/2020/04/Banoffee-pie-1f3c2d8.jpg?quality=90&webp=true&resize=440,400"
       height="400"
