--- a/recipes/lasagna/lasagna.html
+++ b/recipes/lasagna/lasagna.html
@@ -9,6 +9,7 @@
     />
     <meta name="keywords" content="lasagna, Italian recipe, classic lasagne" />
     <title>Lasagna</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Classic Italian Lasagne</h1>
