--- a/recipes/cheesecake/cheesecake.html
+++ b/recipes/cheesecake/cheesecake.html
@@ -7,8 +7,10 @@
 
   <body>
     <h1>Cheese Cake</h1>
+    <link rel="stylesheet" href="style.css" />
     <img
       src="https://user-images.immediate.co.uk/bbcgoodfood/recipes/user-recipe/cheesecake-cheesecake-296623_640_426_4.jpg?quality=90&webp=true&resize=600,545"
+      class="center-image"
       height="545"
       width="600"
       alt="slice of cheesecake"
