new update in css for banoffee pie

--- a/recipes/banoffee/banoffee_pie.html
+++ b/recipes/banoffee/banoffee_pie.html
@@ -9,12 +9,13 @@
     <h1>Banoffee Pie</h1>
     <link rel="stylesheet" href="style.css" />
     <img
+      class="pie"
       src="https://images.immediate.co.uk/production/volatile/sites/30/2020/04/Banoffee-pie-1f3c2d8.jpg?quality=90&webp=true&resize=440,400"
       height="400"
       width="440"
       alt="Banoffee Pie"
     />
-    <p>
+    <p class="underimage">
       Treat loved ones to a banoffee pie for dessert featuring a classic biscuit
       base, oozy caramel, bananas, cream and chocolate. Who could resist?
     </p>
@@ -30,7 +31,7 @@
     </ul>
     <h3>Method</h3>
     <h4>STEP 1</h4>
-    <p>
+    <p class="underimage1">
       Crush the digestive biscuits, either by hand using a wooden spoon, or in a
       food processor, until you get fine crumbs, tip into a bowl. <br />Mix the
       crushed biscuits with the melted butter until fully combined. Tip the
@@ -40,14 +41,14 @@
       overnight.
     </p>
     <h4>STEP 2</h4>
-    <p>
+    <p class="underimage1">
       Beat the caramel to loosen and spoon it over the bottom of the biscuit
       base. Spread it out evenly using the back of a spoon or palette knife.
       <br />Gently push the chopped banana into the top of the caramel until the
       base is covered. Put in the fridge.
     </p>
     <h4>STEP 3</h4>
-    <p>
+    <p class="underimage1">
       Whip the cream with the icing sugar until billowy and thick. Take the pie
       out of the fridge and spoon the whipped cream on top of the bananas.
       <br />Grate the dark chocolate over the cream, if you like, and serve.
