--- a/recipes/cheesecake/cheesecake.html
+++ b/recipes/cheesecake/cheesecake.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Cheese Cake</h1>
     <link rel="stylesheet" href="style.css" />
+
     <img
       src="https://user-images.immediate.co.uk/bbcgoodfood/recipes/user-recipe/cheesecake-cheesecake-296623_640_426_4.jpg?quality=90&webp=true&resize=600,545"
       class="center-image"
@@ -15,10 +16,11 @@
       width="600"
       alt="slice of cheesecake"
     />
-    <p>
+    <p class="image-under">
       The best recipe of cheesecakes for them who love feasting the original
       recipes of anything... It' s easy and very cheap!
     </p>
+
     <h3>Ingredients</h3>
     <ul>
       <li>250g digestive biscuits</li>
