--- a/recipes/banoffee/banoffee_pie.html
+++ b/recipes/banoffee/banoffee_pie.html
@@ -30,28 +30,30 @@
       <li>1 square dark chocolate (optional)</li>
     </ul>
     <h3>Method</h3>
-    <h4>STEP 1</h4>
-    <p class="underimage1">
-      Crush the digestive biscuits, either by hand using a wooden spoon, or in a
-      food processor, until you get fine crumbs, tip into a bowl. <br />Mix the
-      crushed biscuits with the melted butter until fully combined. Tip the
-      mixture into a 23cm loose bottomed fluted tart tin and cover the tin,
-      <br />including the sides, with the biscuit in an even layer. Push down
-      with the back of a spoon to smooth the surface and chill for 1 hr, or
-      overnight.
-    </p>
-    <h4>STEP 2</h4>
-    <p class="underimage1">
-      Beat the caramel to loosen and spoon it over the bottom of the biscuit
-      base. Spread it out evenly using the back of a spoon or palette knife.
-      <br />Gently push the chopped banana into the top of the caramel until the
-      base is covered. Put in the fridge.
-    </p>
-    <h4>STEP 3</h4>
-    <p class="underimage1">
-      Whip the cream with the icing sugar until billowy and thick. Take the pie
-      out of the fridge and spoon the whipped cream on top of the bananas.
-      <br />Grate the dark chocolate over the cream, if you like, and serve.
-    </p>
+    <div>
+      <h4>STEP 1</h4>
+      <p class="underimage1">
+        Crush the digestive biscuits, either by hand using a wooden spoon, or in
+        a food processor, until you get fine crumbs, tip into a bowl. <br />Mix
+        the crushed biscuits with the melted butter until fully combined. Tip
+        the mixture into a 23cm loose bottomed fluted tart tin and cover the
+        tin, <br />including the sides, with the biscuit in an even layer. Push
+        down with the back of a spoon to smooth the surface and chill for 1 hr,
+        or overnight.
+      </p>
+      <h4>STEP 2</h4>
+      <p class="underimage1">
+        Beat the caramel to loosen and spoon it over the bottom of the biscuit
+        base. Spread it out evenly using the back of a spoon or palette knife.
+        <br />Gently push the chopped banana into the top of the caramel until
+        the base is covered. Put in the fridge.
+      </p>
+      <h4>STEP 3</h4>
+      <p class="underimage1">
+        Whip the cream with the icing sugar until billowy and thick. Take the
+        pie out of the fridge and spoon the whipped cream on top of the bananas.
+        <br />Grate the dark chocolate over the cream, if you like, and serve.
+      </p>
+    </div>
   </body>
 </html>
