--- a/recipes/cheesecake/cheesecake.html
+++ b/recipes/cheesecake/cheesecake.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Cheesecake</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <h1>Cheese Cake</h1>
-    <link rel="stylesheet" href="style.css" />
 
     <img
       src="https://user-images.immediate.co.uk/bbcgoodfood/recipes/user-recipe/cheesecake-cheesecake-296623_640_426_4.jpg?quality=90&webp=true&resize=600,545"
@@ -18,42 +17,55 @@
     />
     <p class="image-under">
       The best recipe of cheesecakes for them who love feasting the original
-      recipes of anything... It' s easy and very cheap!
+      recipes of anything... It's easy and very cheap!
     </p>
 
-    <h3>Ingredients</h3>
-    <ul>
-      <li>250g digestive biscuits</li>
-      <li>125g butter in room temperature</li>
-      <li>600g soft cheese</li>
-      <li>60g caster sugar</li>
-      <li>200ml double cream</li>
-      <li>
-        handful strawberries or rasberries or any marmelade of your choice, to
-        serve (optional)
-      </li>
-    </ul>
-    <h3>Method</h3>
-    <strong>STEP 1</strong>
-    <p>Preheat the oven to 180C/ fan 160C/ gas 4.</p>
-    <strong>STEP 2</strong>
-    <p>
-      Blend the digestive biscuits and the butter in a food processor until the
-      mixture looks like wet sand. Then, <br />press the mixture into the bottom
-      of the tin (20cm) and bake for 10-12 minutes.
-    </p>
-    <strong>STEP 3</strong>
-    <p>Cool the base of the cheesecake while preparing the filling.</p>
-    <strong>STEP 4</strong>
-    <p>
-      Stir in a bowl the soft cheese and the caster sugar for a little.
-      <br />Continue by adding the double cream. Pour the mixture in the tin and
-      smooth with a spoon or a spatula.
-    </p>
-    <strong>STEP 5</strong>
-    <p>
-      Leave to set in the fridge for 1 hour or better overnight and serve with
-      strawberries or rasberries or any marmelade you like.
-    </p>
+    <div class="content-wrapper">
+      <h3>Ingredients</h3>
+      <ul>
+        <li>250g digestive biscuits</li>
+        <li>125g butter in room temperature</li>
+        <li>600g soft cheese</li>
+        <li>60g caster sugar</li>
+        <li>200ml double cream</li>
+        <li>
+          handful strawberries or rasberries or any marmelade of your choice, to
+          serve (optional)
+        </li>
+      </ul>
+
+      <h3>Method</h3>
+      <div class="step">
+        <strong class="steps">STEP 1</strong>
+        <p>Preheat the oven to 180C/ fan 160C/ gas 4.</p>
+      </div>
+      <div class="step">
+        <strong class="steps">STEP 2</strong>
+        <p>
+          Blend the digestive biscuits and the butter in a food processor until
+          the mixture looks like wet sand. Then, press the mixture into the
+          bottom of the tin (20cm) and bake for 10-12 minutes.
+        </p>
+      </div>
+      <div class="step">
+        <strong class="steps">STEP 3</strong>
+        <p>Cool the base of the cheesecake while preparing the filling.</p>
+      </div>
+      <div class="step">
+        <strong class="steps">STEP 4</strong>
+        <p>
+          Stir in a bowl the soft cheese and the caster sugar for a little.
+          Continue by adding the double cream. Pour the mixture in the tin and
+          smooth with a spoon or a spatula.
+        </p>
+      </div>
+      <div class="step">
+        <strong class="steps">STEP 5</strong>
+        <p>
+          Leave to set in the fridge for 1 hour or better overnight and serve
+          with strawberries or rasberries or any marmelade you like.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
